// Copyright 2014 Pants project contributors (see CONTRIBUTORS.md).
// Licensed under the Apache License, Version 2.0 (see LICENSE).

package com.pants.examples.element;

import "com/pants/examples/temperature/temperatures.proto";

/**
 * Describes an element in the Periodic table
 */
message Element {
  required string symbol = 1;
  optional string name = 2;
  required uint32 atomic_number = 3;
  optional com.pants.examples.temperature.Temperature melting_point = 4;
  optional com.pants.examples.temperature.Temperature boiling_point = 5;
}

